--- a/src/components/FaceRecognition/FaceRecognition.css
+++ b/src/components/FaceRecognition/FaceRecognition.css
@@ -1,3 +1,20 @@
+
+
+.centerFaceRec {
+	display: flex;
+	justify-content: center;
+	max-width: 100%;
+}
+
+.absoluteDiv {
+	/*absolute mt2*/
+	position: absolute;
+	margin: 20px;
+	margin: auto;
+	object-fit: contain;
+	max-width: 90%;
+}
+
 .bounding-box {
   position: absolute;
   box-shadow: 0 0 0 3px #149df2 inset;
