--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,5 +1,5 @@
 .form {
-  width: 700px;
+  width: 600px;
   background:
   radial-gradient(circle farthest-side at 0% 50%,#fb1 23.5%,rgba(240,166,17,0) 0)21px 30px,
   radial-gradient(circle farthest-side at 0% 50%,#B71 24%,rgba(240,166,17,0) 0)19px 30px,
@@ -8,4 +8,95 @@
   linear-gradient(30deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0) 0,rgba(240,166,17,0) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
   linear-gradient(90deg,#B71 2%,#fb1 0,#fb1 98%,#B71 0%)0 0 #fb1;
   background-size:40px 60px;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
+}
+
+.padded {
+	padding: 10px;
+	width: 100%;
+}
+
+.centerItHorizontally {
+	margin-right: auto;
+	margin-left: auto;
+}
+.flexed {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.urlInputSpan {
+	/*font-size: 1rem;
+	padding: 8px;
+	margin: 10px;
+	background-color: red;*/
+	background-color: #636e72;
+	color: white;
+	padding: 8px 10px;
+	margin: 10px;
+	font-weight: bold;
+	border-radius: 100%;
+}
+
+.urlInput {
+	padding: 6px;
+	width: 100%;
+	font-size: 1.25rem;
+}
+.urlInput::placeholder {
+	text-align: center;
+}
+
+.fileUploadDiv {
+	display: flex;
+	position: relative;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 10px;
+	transition: all 0.3s ease;
+}
+.fileUploadDiv:hover {
+	transform: scale(1.05);
+}
+
+.fileUploadInput {
+	opacity: 0;
+	padding: 10px;
+	z-index: 1;
+}
+
+.fileUploadSpan {
+	position: absolute;
+	background-color: rgba(0,0,0,0.8);
+	z-index: 0;
+	color: white;
+	padding: 10px;
+}
+
+.detectButton {
+	/*w-30 grow linkpv2 dib white*/
+	cursor: pointer;
+	font-size: 1.25rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-top: .5rem;
+  padding-bottom: .5rem;
+	transition: all 0.3s ease;
+	background-color: #a463f2;
+	color: white;
+	width: 30%;
+	text-decoration: none;
+	display: inline-block;
+	text-transform: none;
+	outline: none;
+}
+
+.detectButton:hover, .detectButton:focus, .detectButton:active {
+	transform: scale(1.05);
+	outline: none;
 }
