--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -10,13 +10,101 @@
 	justify-content: center;
 }
 
+.responsive {
+	background-color: white;
+	max-height: 70%;
+	max-width: 70%;
+	overflow: scroll;
+	padding: 20px;
+	position: absolute;
+	border: 1px solid black;
+}
+/*br3 ba bg-white mv4 w-100 w-50-m w-25-l mw6 shadow-5 center */
+
+.main {
+	padding: 10px;
+}
+/*pa4 black-80 w-80*/
 .modal-close {
 	font-size: 3rem;
 	font-style: bold;
 	cursor: pointer;
+	position: absolute;
+	top: 0%;
+	right: 2%;
 }
 
 .modal-close:hover {
 	color: gray;
 	cursor: pointer;
+}
+
+.centerThatDiv {
+	text-align: center;
+}
+
+.avatarImageInProfile {
+	border-radius: 100px;
+	border: 1px solid black;
+	margin: 20px;
+	width: 200px;
+}
+/*br-100 ba dib mr2*/
+.labelForUsername {
+	font-weight: 600;
+	margin-top: 20px;
+}
+/*mt2 fw6*/
+.otherLabels {
+	/*mt2 fw6*/
+	font-weight: 600;
+	margin-top: 10px;
+}
+
+.inputClasses {
+	/*pa2 ba w-100*/
+	padding: 0px 10px;
+	/*background-color: white;*/
+	width: 100%;
+	height: 36px;
+	border: 1px solid black;
+}
+
+.saveAndCancelButtonsDiv {
+	margin-top: 40px;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.saveButton {
+	padding: 10px;
+	height: 40px;
+	cursor: pointer;
+	border: 2px outset rgba( 0, 0, 0, .2 );
+	color: black;
+	width: 40%;
+	background: #96ccff;
+	/*border-color: ;*/
+	font-weight: bold;
+	transition: all 0.3s ease;
+}
+.saveButton:hover {
+	transform: scale(1.05);
+	color: white;
+}
+.cancelButton {
+	padding: 10px;
+	height: 40px;
+	cursor: pointer;
+	border: 2px outset rgba( 0, 0, 0, .2 );
+	color: black;
+	width: 40%;
+	background: #ff725c;
+	font-weight: bold;
+	transition: all 0.3s ease;
+}
+
+.cancelButton:hover {
+	transform: scale(1.05);
+	color: white;
 }
