--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-family: "Courier New", Courier, monospace;
   background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%);
+  /*box-sizing: border-box;*/
+  width: 100%;
 }
 
 button {
