--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,6 @@
   overflow-x: hidden;
   display: grid;
 	grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr 1fr;
-  width: 100%;
-}
-
-.homeApp {
-  text-align: center;
-  overflow-x: hidden;
-  display: grid;
-	grid-template-columns: 1fr;
   grid-template-rows: 1fr 10fr 1fr;
   width: 100%;
 }
@@ -41,4 +32,11 @@
 	background-color: red;
 	width: 100%;
 	position: sticky;
+}
+
+.rankAndImageFormWrapper {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  max-width: 100vw;
 }
