--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -11,6 +11,7 @@
   padding: 2rem;
   border-radius: 0.5rem;
   box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
+  margin: auto;
 }
 
 .padded {
@@ -18,6 +19,14 @@
 	width: 100%;
 }
 
+.textAboveForm {
+	font-size: 1.5rem;
+	max-width: 90%;
+	text-align: center;
+	margin: auto;
+	padding: auto;
+	margin-bottom: 10px;
+}
 .centerItHorizontally {
 	margin-right: auto;
 	margin-left: auto;
@@ -68,6 +77,7 @@
 	opacity: 0;
 	padding: 10px;
 	z-index: 1;
+	max-width: 180px;
 }
 
 .fileUploadSpan {
@@ -75,7 +85,8 @@
 	background-color: rgba(0,0,0,0.8);
 	z-index: 0;
 	color: white;
-	padding: 10px;
+	padding: 14px 10px;
+	width: 180px;
 }
 
 .detectButton {
@@ -94,9 +105,37 @@
 	display: inline-block;
 	text-transform: none;
 	outline: none;
+	min-width: 168.84px;
 }
 
 .detectButton:hover, .detectButton:focus, .detectButton:active {
 	transform: scale(1.05);
 	outline: none;
 }
+
+@media screen and (max-width: 600px) {
+	.form {
+		width: 80%;
+		margin: ;
+	}
+	.textAboveForm {
+		max-width: 70%;
+	}
+	.padded {
+		padding: 0px;
+	}
+	.centerItHorizontally {
+		text-align: center;
+	}
+}
+/*@media screen and (max-width: 400px) {
+	.form {
+		width: 60%;
+	}
+	.padded {
+		padding: 0px;
+	}
+	.centerItHorizontally {
+		text-align: center;
+	}
+}*/
