--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,17 +1,34 @@
 .navHome {
+	display: grid;
+	grid-template-columns: 6fr 6fr;
+}
+
+.gridCol1 {
+	max-width: 50%;
+}
+.gridCol2 {
 	display: flex;
-	justify-content: space-between;
-	max-width: 100%;
+	justify-content: flex-end;
+	align-items: flex-start;
+	width: 50%;
+	min-width: 64px;
+	padding-top: 32px;
+	padding-right: 32px;
 }
 
 .nav {
-	display: flex;
-	justify-content: space-between;
-	max-width: 100%;
-	padding-right: 30px;
-	box-sizing: border-box;
+	display: grid;
+	grid-template-columns: 6fr 6fr;
 }
 
+.divInNav {
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-start;
+	width: 50%;
+	padding-top: 22px;
+	padding-right: 20px;
+}
 .customLink {
 	font-size: 1.5rem;
 	color: black;
@@ -35,4 +52,27 @@
 	outline: none;
 }
 
-/*f3 link dim black underline pa3 pointer*/
+@media screen and (max-width: 600px) {
+	.gridCol2 {
+		flex-direction: column;
+		align-items: flex-end;
+		justify-content: flex-start;
+		padding-top: 42px;
+		padding-left: 0px;
+		/*padding-right: 10px;*/
+		margin: 0;
+	}
+	.divInNav {
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		padding-top: 22px;
+		padding-left: 0px;
+		padding-right: 0px;
+		margin: 0;
+	}
+	.customLink {
+		margin: 0px 10px;
+		padding: 10px;
+	}
+}
