--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -4,7 +4,7 @@
 	margin-left: auto;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
-	max-width: 60%;
+	max-width: 400px;
 	width: 100%;
 	/*32rem*/
 	box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
