--- a/src/components/Signin/Signin.css
+++ b/src/components/Signin/Signin.css
@@ -3,7 +3,7 @@
 	margin-left: auto;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
-	max-width: 60%;
+	max-width: 400px;
 	width: 100%;
 	box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
 	border-radius: 0.5rem;
